--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node -- ./src/index",
-    "build": "babel src --out-dir ./build"
+    "dev": "nodemon --exec babel-node -- ./src/index",
+    "build": "babel src --out-dir ./build",
+    "start": "node ./build/index"
   },
   "keywords": [],
   "author": "",
