--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "1c_exchanger",
   "version": "1.0.0",
   "main": "index.js",
+  "nodemonConfig": {
+    "delay": "2500"
+  },
   "scripts": {
-    "dev": "nodemon --exec babel-node -- ./src/index",
+    "dev": "nodemon --watch src/ --exec babel-node -- ./src/index",
     "build": "babel src --out-dir ./build",
     "start": "node ./build/index"
   },
@@ -21,13 +24,19 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.14.10"
   },
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jwt-simple": "^0.5.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.13.2",
     "passport": "^0.4.0",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^3.0.1",
+    "passport-local": "^1.0.0",
+    "validator": "^9.2.0"
   }
 }
